Sun Oct 15 10:49:35 1995    <tytso@rsts-11.mit.edu>

	* sim_client.c (main): Fixed location where usage() wasn't being
		called with an argument.

Sat Sep 16 03:45:59 1995  Theodore Y. Ts'o  <tytso@dcl>

	* sim_client.c (main): Fix optional host parsing so that host is
		recognized as an argument without the -h option.  
		Free the context and auth_context structures before exiting.

Fri Sep 15 04:59:30 1995  Theodore Y. Ts'o  <tytso@dcl>

	* sim_client.c (main): Added better options parsing for more
		flexibility in calling this program.  Worked around
		breakage in the Solaris Streams Sockets emulation where
		getsockname() can not be used to find out the address of
		a network interface.

	* configure.in: If we are including both -lsocket and -lnsl,
		#define BROKEN_STREAMS_SOCKETS.
	

Fri Jul 7 15:48:14 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling and LDFLAGS.
	* configure.in - Add KRB5_LIBRARIES.

Wed Jun 28 13:27:17 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* sim_client.c: Include stdlib.h or declare malloc.
		Include string.h for strlen and memcpy defintions.

	* configure.in: Check for stdlib.h.

Thu Jun 15 17:39:54 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Sat Jun 10 22:58:57 1995  Tom Yu  (tlyu@dragons-lair)

	* sim_client.c: krb5_auth_context redefinitions

Fri Jun  9 18:29:09 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Mon May 01 15:56:32 1995  Chris Provenzano  (proven@mit.edu)

        * sim_client.c (main()): Changes to auth_context to better
                support full addresses, for mk_safe() and friends.

Mon Mar 27 09:25:21 1995  Chris Provenzano (proven@mit.edu)

	* sim_client.c: Don't set cksumtype because CKSUMTYPE_RSA_MD4_DES